# search-api-eval

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  queries.md
eval_search/: cli.py  config.py  models.py  runner.py
eval_search/content/: fetcher.py  summarizer.py
eval_search/judges/: base.py  claude_judge.py  openai_judge.py  prompts.py
eval_search/metrics/: cost.py  latency.py  recency.py
eval_search/providers/: base.py  brave.py  exa.py  serpapi.py  serper.py  tavily.py
eval_search/queries/: bank.py
eval_search/report/: charts.py  generator.py  recommendation_prompt.md  recommender.py
eval_search/report/templates/: report.html.j2
sample_reports/: exa_auto_native_vs_brave_news_ai_topic.html
tests/: conftest.py
tests/test_metrics/: test_recency.py
