[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-search"
version = "0.1.0"
description = "Benchmark web search APIs for newsletter use cases"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "anthropic>=0.29",
    "openai>=1.30",
    "jinja2>=3.1",
    "plotly>=5.22",
    "rich>=13.7",
    "typer>=0.12",
    "dateparser>=1.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
eval-search = "eval_search.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
